<resources>
    <string name="app_name">nomad internet</string>
    <string name="wt_one">Internet You Can Pause For Free </string>
    <string name="wt_two">World’s Fastest 5G Modem </string>
    <string name="wt_three">Over the Top Connectivity</string>
    <string name="wt_four">Technology making your life better is what we bring you - this is easy to use</string>
    <string name="skywalker">Skywalker</string>
    <string name="skip">Skip</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_to_skywalker_please_signup_with_your_personal_account_information">Welcome to Skywalker . Please signup with your personal account information</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_signup_with">Or Signup With</string>
    <string name="or_signin_with">Or Login With</string>
    <string name="don_t_have_an_account_create_account">Don’t have an account? Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello">👋 Hello!</string>
    <string name="search_data_packs">Search data packs</string>
    <string name="local_esims">Local eSIMs</string>
    <string name="regional_esims">Regional eSIMs</string>
    <string name="global_esim">Global eSIM</string>
    <string name="popular_countries">Popular Countries</string>
    <string name="data">Data</string>
    <string name="validity">Validity</string>
    <string name="use_esim_wherever_you_are">Use Esim Wherever you are!</string>
    <string name="calls_and_sms">calls and sms</string>
    <string name="global">GLOBAL</string>
    <string name="profile">Profile</string>
    <string name="account_information">Account Information</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="orders">Orders</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="contact_us">Contact Us</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="_email">EMAIL</string>
    <string name="_password">PASSWORD</string>
    <string name="save_changes">Save changes</string>
    <string name="you_don_t_have_any_orders_yet">You don’t have any orders yet</string>
    <string name="when_purchase_an_esim_or_top_up_package_you_ll_see_your_order_details_here">When purchase an eSIM or top-up package, you’ll see your order details here.</string>
    <string name="about_skywalker">About Skywalker</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_skywalker_info">"Lörem ipsum bed treras digital-tv faktigt, räd. Rerat desänat häk. Astrolörar föseck dekakror medan proskade dekarönde. Epipoheten ivybel revåde. Cli-fi skurkstat opons besk, dir. Euvint irat sydor. Pösäde gigagt utan stuprörspolitik nyde, epiplastisk. Faren auton ten.  \n \n Supragunde teleosmos plartad mikrosk. Krorera våskapet. Polyligt anasäktiga, och besam. Dov sonade kahenat heterohet. Dett hexadäll kylkrage, alltså vogönade. Batt dektiga fangen. Preren orade. Nesm trar saning gölig. \n \n Epipoheten ivybel revåde. Cli-fi skurkstat opons besk, dir. Euvint irat sydor. Pösäde gigagt utan stuprörspolitik nyde, epiplastisk. Faren auton ten. \n \nLörem ipsum bed treras digital-tv faktigt, räd. Rerat desänat häk. Astrolörar föseck dekakror medan proskade dekarönde. Epipoheten ivybel revåde. Cli-fi skurkstat opons besk, dir. Euvint irat sydor. Pösäde gigagt utan stuprörspolitik nyde, epiplastisk. Faren auton ten.  Epipoheten ivybel revåde. Cli-fi skurkstat opons besk, dir. Euvint irat sydor. Pösäde gigagt utan stuprörspolitik nyde, epiplastisk. Faren auton ten. "</string>
    <string name="more_info">More Info</string>
    <string name="coverage">Coverage</string>
    <string name="available_top_up_packages_2">Available Top-up Packages (2)</string>
    <string name="supported_countries">Supported Countries</string>
    <string name="additional_information">Additional Information</string>
    <string name="network">Network</string>
    <string name="activation_policy">Activation policy</string>
    <string name="plan_type">Plan Type</string>
    <string name="show_more">Show More ...</string>
    <string name="full_name">Full name</string>
    <string name="payment">Payment</string>
    <string name="profile_update_successfully">Profile updated successfully</string>
    <string name="logout">logout</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="payment_received">Payment received successfully!</string>
    <string name="payment_failed">Payment failed, Please try after some time.</string>
    <string name="payment_canceled">Payment cancel</string>
    <string name="show_more_btn">Show More</string>
    <string name="connected">Connected</string>
    <string name="activated_esims">Activated E SIMs</string>
    <string name="current_e_sim">Current E SIMs</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refer_and_earn"><![CDATA[Refer & Earn]]></string>
    <string name="you_don_t_have_any_purchase_sim_yet">You haven’t purchased any sim</string>
    <string name="you_don_t_have_any_purchase_hotspot">You haven’t purchased any hotspot</string>
    <string name="skymoney">Skymoney</string>
    <string name="manage_plan">Manage Plan</string>
    <string name="activate_plan">Activate Plan</string>
    <string name="server_client_id">296909499862-hvgo6sipt95m17ama1bmnhg5lqmj6pbp.apps.googleusercontent.com</string>
</resources>