<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_minus18sdp"
            app:cardCornerRadius="@dimen/_18sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/layout_toolbar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAboutSkywalker"
                    style="@style/regularText_black_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/about_skywalker"
                    android:textColor="#5E6676"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPrivacyPolicy"
                    style="@style/regularText_black_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/privacy_policy"
                    android:textColor="#5E6676"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTermsCondition"
                    style="@style/regularText_black_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:drawableEnd="@drawable/ic_next_right"
                    android:drawablePadding="@dimen/_15sdp"
                    android:text="@string/terms_conditions"
                    android:textColor="#5E6676"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>