<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="data"
            type="com.skywalker.model.respone.UserData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_minus18sdp"
            app:cardCornerRadius="@dimen/_18sdp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/layout_toolbar" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/regularText_black_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:text="@string/first_name"
                            android:textColor="#5E6676" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtFirstName"
                            style="@style/editText_black_15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="#F6F8F9"
                            android:hint="@string/first_name"
                            android:text="@{data.firstName}" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/regularText_black_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/last_name"
                            android:textColor="#5E6676" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtLastName"
                            style="@style/editText_black_15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="#F6F8F9"
                            android:hint="@string/last_name"
                            android:text="@{data.lastName}"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/regularText_black_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/username"
                            android:textColor="#5E6676" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/edtUserName"
                            style="@style/editText_black_15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="#F6F8F9"
                            android:hint="@string/username"
                            android:text="@{data.userName}"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/regularText_black_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/_email"
                            android:textColor="#5E6676" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtEmail"
                            style="@style/editText_black_15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="#F6F8F9"
                            android:hint="@string/_email"
                            android:text="@{data.email}" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/regularText_black_13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:text="@string/_password"
                            android:visibility="gone"
                            android:textColor="#5E6676" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            style="@style/editText_black_15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="15sp"
                            android:layout_marginEnd="@dimen/_12sdp"
                            android:backgroundTint="#F6F8F9"
                            android:hint="@string/_password"
                            android:visibility="gone"
                            android:inputType="textPassword" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </ScrollView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/button_green_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_35sdp"
                    android:text="@string/save_changes"
                    android:textAllCaps="true" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>