<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/ivLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_green_logo"
                    android:text="@string/hello"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/semiMedium_black_22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtSearch"
                    style="@style/editText_black_15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_rectangle_rounded_corner"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/search_data_packs"
                    android:padding="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <View
                    android:id="@+id/viewTabBg"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtSearch" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLocalSim"
                    style="@style/semiBoldText_black_14"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_rectangle_rounded_corner_5_green"
                    android:gravity="center"
                    android:text="@string/local_esims"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/viewTabBg"
                    app:layout_constraintEnd_toStartOf="@+id/tvRegionalSim"
                    app:layout_constraintStart_toStartOf="@+id/viewTabBg"
                    app:layout_constraintTop_toTopOf="@+id/viewTabBg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegionalSim"
                    style="@style/semiBoldText_black_14"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/regional_esims"
                    app:layout_constraintBottom_toBottomOf="@+id/viewTabBg"
                    app:layout_constraintEnd_toStartOf="@+id/tvGlobalEsim"
                    app:layout_constraintStart_toEndOf="@+id/tvLocalSim"
                    app:layout_constraintTop_toTopOf="@+id/viewTabBg" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvGlobalEsim"
                    style="@style/semiBoldText_black_14"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:text="@string/global_esim"
                    app:layout_constraintBottom_toBottomOf="@+id/viewTabBg"
                    app:layout_constraintEnd_toEndOf="@+id/viewTabBg"
                    app:layout_constraintStart_toEndOf="@+id/tvRegionalSim"
                    app:layout_constraintTop_toTopOf="@+id/viewTabBg" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/localESim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="rvCountry" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/regionalESim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="rvRegion,ivMessage" />


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_banner"
                    app:layout_constraintTop_toBottomOf="@+id/viewTabBg" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPopularCountry"
                    style="@style/regularText_black_19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="12dp"
                    android:text="@string/popular_countries"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vpBanner" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tvPopularCountry"
                    tools:listitem="@layout/adapter_popular_country" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:nestedScrollingEnabled="false"
                    android:numColumns="auto_fit"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvPopularCountry"
                    tools:itemCount="10"
                    tools:listitem="@layout/adapter_country" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:nestedScrollingEnabled="false"
                    android:numColumns="auto_fit"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvPopularCountry"
                    tools:itemCount="10"
                    tools:listitem="@layout/adapter_country" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivMessage"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:src="@drawable/ic_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>